src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__non_resolved_generics_reported.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E064]: Could not resolve generic type T with ANY_STRING
  ┌─ <internal>:3:31
  │
3 │         FUNCTION func  : INT  test(); END_FUNCTION
  │                               ^^^^^^^ Could not resolve generic type T with ANY_STRING
